nginx-istio/istio/v2/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'mj-nginx-istio.eastus.cloudapp.azure.com'
    port:
      name: http
      number: 80
      protocol: HTTP
