nginx-istio/istio/v2/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-vs
spec:
  hosts:
    - 'mj-nginx-istio.eastus.cloudapp.azure.com'
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: '/echo_'
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: echo-service
